# swigex

./: CMakeLists.txt  Config.cmake.in  Makefile  README.md  version.h.in
.github/workflows/: coverage-tests_python.yml  coverage-tests_r.yml  nonreg-demos-courses_python_ubuntu-latest.yml  nonreg-demos-courses_r_ubuntu-latest.yml  nonreg-demos-courses_ubuntu-latest.yml  nonreg-tests_macos-latest.yml  nonreg-tests_ubuntu-latest.yml  nonreg-tests_windows-latest-msvc.yml  nonreg-tests_windows-latest-rtools.yml  publish.yml  publish_demos.yml  publish_doc.yml  publish_doxygen.yml  publish_python_macos.yml  publish_python_manylinux.yml  publish_python_ubuntu.yml  publish_python_windows.yml  publish_r_linux.yml  publish_r_macos.yml  publish_r_ubuntu.yml  publish_r_windows.yml
cmake/: cpp.cmake  doxygen.cmake  install.cmake  version.cmake
doc/demo/python/: CMakeLists.txt  testGstlearn.ipynb
doc/demo/r/: testFibo.Rmd
include/: VectorNumT.hpp  VectorT.hpp  args.hpp  fibo.hpp  polymorph.hpp  swigex_define.hpp
python/: CMakeLists.txt  README.md  pyproject.toml.in  pyswigex.i  run_test_ipynb.py  version.py.in
r/: CMakeLists.txt  README.md  rswigex.i
src/: args.cpp  fibo.cpp  polymorph.cpp
swig/: swig_exp.i  swig_inc.i
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  testArgs.cpp  testPolymorph.cpp
tests/ipynb/: CMakeLists.txt
tests/ipynb/output/: testGstlearn.asciidoc
tests/py/: CMakeLists.txt  testArgs.py  testArgs.ref  testPolymorph.py  testPolymorph.ref
tests/r/: testArgs.r  testArgs.ref  testFibo.r  testPolymorph.r
tests/rmd/output/: testFibo.out
